--- a/VGG_imagnet.ipynb
+++ b/VGG_imagnet.ipynb
@@ -7,7 +7,6 @@
       "name": "VGG_imagnet.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPws6CX4aj9yrETwhQwlX41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -892,6 +891,348 @@
           "execution_count": 138
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "owDR6JC8z1qn"
+      },
+      "source": [
+        "#import numpy as np\n",
+        "#import matplotlib.pyplot as plt\n",
+        "from tqdm import tqdm\n",
+        "import os\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ReDuq0FGz8_I",
+        "outputId": "ff19226a-1668-4fc1-e377-eeedd08d2954",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "images = []\n",
+        "#root = '/content/drive/MyDrive/gan-getting-started/monet_jpg'\n",
+        "root = 'sample_data/Monet'\n",
+        "for file in tqdm(os.listdir(root)):\n",
+        "    images.append(plt.imread(root+'/'+file))\n",
+        "images = np.array(images)\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 300/300 [00:00<00:00, 842.19it/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vWqFKv-14Asc",
+        "outputId": "80d6a22b-41ea-4e8e-af65-f6793de17599",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "images = images.astype('float32')\n",
+        "print(images.shape)\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(300, 256, 256, 3)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "69oHh5sM1E8C",
+        "outputId": "5fdc9d8f-5c6a-4c70-ea84-d4857996bd99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "v1=images[0:30,:,:,:]\n",
+        "v2=images[40:70,:,:,:]\n",
+        "print(images.shape)\n",
+        "print(v1.shape)\n",
+        "print(v2.shape)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(300, 256, 256, 3)\n",
+            "(30, 256, 256, 3)\n",
+            "(30, 256, 256, 3)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PONW_LLoycZ1"
+      },
+      "source": [
+        "# example of calculating the frechet inception distance in Keras\n",
+        "import numpy\n",
+        "from numpy import cov\n",
+        "from numpy import trace\n",
+        "from numpy import iscomplexobj\n",
+        "from numpy import asarray\n",
+        "from numpy.random import randint\n",
+        "from scipy.linalg import sqrtm\n",
+        "from keras.applications.inception_v3 import InceptionV3\n",
+        "from keras.applications.inception_v3 import preprocess_input\n",
+        "from keras.datasets.mnist import load_data\n",
+        "from skimage.transform import resize\n",
+        " \n",
+        "# scale an array of images to a new size\n",
+        "def scale_images(images, new_shape):\n",
+        "\timages_list = list()\n",
+        "\tfor image in images:\n",
+        "\t\t# resize with nearest neighbor interpolation\n",
+        "\t\tnew_image = resize(image, new_shape, 0)\n",
+        "\t\t# store\n",
+        "\t\timages_list.append(new_image)\n",
+        "\treturn asarray(images_list)\n",
+        " \n",
+        "# calculate frechet inception distance\n",
+        "def calculate_fid(model, images1, images2):\n",
+        "\t# calculate activations\n",
+        "\tact1 = model.predict(images1)\n",
+        "\tact2 = model.predict(images2)\n",
+        "\t# calculate mean and covariance statistics\n",
+        "\tmu1, sigma1 = act1.mean(axis=0), cov(act1, rowvar=False)\n",
+        "\tmu2, sigma2 = act2.mean(axis=0), cov(act2, rowvar=False)\n",
+        "\t# calculate sum squared difference between means\n",
+        "\tssdiff = numpy.sum((mu1 - mu2)**2.0)\n",
+        "\t# calculate sqrt of product between cov\n",
+        "\tcovmean = sqrtm(sigma1.dot(sigma2))\n",
+        "\t# check and correct imaginary numbers from sqrt\n",
+        "\tif iscomplexobj(covmean):\n",
+        "\t\tcovmean = covmean.real\n",
+        "\t# calculate score\n",
+        "\tfid = ssdiff + trace(sigma1 + sigma2 - 2.0 * covmean)\n",
+        "\treturn fid\n"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AuZC1yHi5BEb"
+      },
+      "source": [
+        " \n",
+        "# prepare the inception v3 model\n",
+        "#model = InceptionV3(include_top=False, pooling='avg', input_shape=(256,256,3))\n",
+        "# define two fake collections of images\n",
+        "#images1 = randint(0, 255, 10*32*32*3)\n",
+        "#images1 = images1.reshape((10,32,32,3))\n",
+        "##images2 = randint(0, 255, 10*32*32*3)\n",
+        "#images2 = images2.reshape((10,32,32,3))\n",
+        "#print('Prepared', images1.shape, images2.shape)\n",
+        "# convert integer to floating point values\n",
+        "#images1 = images.astype('float32')\n",
+        "#images2 = images.astype('float32')\n",
+        "# resize images\n",
+        "#images1 = scale_images(images1, (299,299,3))\n",
+        "#images2 = scale_images(images2, (299,299,3))\n",
+        "#print('Scaled', images1.shape, images2.shape)\n",
+        "# pre-process images\n",
+        "images1 = preprocess_input(images1)\n",
+        "images2 = preprocess_input(images2)\n",
+        "# fid between images1 and images1\n",
+        "fid = calculate_fid(model, images1, images1)\n",
+        "print('FID (same): %.3f' % fid)\n",
+        "# fid between images1 and images2\n",
+        "fid = calculate_fid(model, images1, images2)\n",
+        "print('FID (different): %.3f' % fid)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5RgLc0Ih5HOg"
+      },
+      "source": [
+        "model = InceptionV3(include_top=False, pooling='avg', input_shape=(256,256,3))\n",
+        "act1 = model.predict(images)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "92sHWoM_78dH",
+        "outputId": "bbd2bf1b-3acf-4897-c20c-c487f419e0af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "\n",
+        "imagesV1 = preprocess_input(v1)\n",
+        "imagesV2 = preprocess_input(v2)\n",
+        "# fid between images1 and images1\n",
+        "fid = calculate_fid(model, images1, imagesV1)\n",
+        "print('FID (v1): %.3f' % fid)\n",
+        "# fid between images1 and images2\n",
+        "fid = calculate_fid(model, images1, imagesV2)\n",
+        "print('FID (v2): %.3f' % fid)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "FID (v1): 193.338\n",
+            "FID (v2): 202.285\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fEMqJRU_8pzj",
+        "outputId": "1d95e52c-e113-42f1-d59f-edc5a131c78f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 395
+        }
+      },
+      "source": [
+        "#rand 1000 vectors of 30 indexs\n",
+        "min=192\n",
+        "AllImages = preprocess_input(images)\n",
+        "for number in range(1000):   \n",
+        "    rndArr=np.random.choice(300, 30)\n",
+        "    selectImg=images[rndArr,:]\n",
+        "    selectImg1 = preprocess_input(selectImg)\n",
+        "    fid = calculate_fid(model, AllImages, selectImg1)\n",
+        "    if fid < min:\n",
+        "       print('FID (different): %.3f' % fid)\n",
+        "       min=fid\n",
+        "       minIndx= rndArr\n",
+        "print('Min---FID (different): %.3f' % min)\n",
+        "print(minIndx)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-3786cb60b9ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mselectImg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrndArr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mselectImg1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselectImg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalculate_fid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAllImages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mselectImg1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfid\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m        \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'FID (different): %.3f'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mfid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-15-3011f9e31335>\u001b[0m in \u001b[0;36mcalculate_fid\u001b[0;34m(model, images1, images2)\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mssdiff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmu1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmu2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;31m# calculate sqrt of product between cov\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0mcovmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msqrtm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msigma2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[0;31m# check and correct imaginary numbers from sqrt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0miscomplexobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcovmean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/_matfuncs_sqrtm.py\u001b[0m in \u001b[0;36msqrtm\u001b[0;34m(A, disp, blocksize)\u001b[0m\n\u001b[1;32m    175\u001b[0m     \u001b[0mfailflag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 177\u001b[0;31m         \u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sqrtm_triu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mblocksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mblocksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    178\u001b[0m         \u001b[0mZH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconjugate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mZ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mZH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/scipy/linalg/_matfuncs_sqrtm.py\u001b[0m in \u001b[0;36m_sqrtm_triu\u001b[0;34m(T, blocksize)\u001b[0m\n\u001b[1;32m    100\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m                 S = S - R[istart:istop, istop:jstart].dot(R[istop:jstart,\n\u001b[0;32m--> 102\u001b[0;31m                                                             jstart:jstop])\n\u001b[0m\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m             \u001b[0;31m# Invoke LAPACK.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VXdZh3sX-OBV",
+        "outputId": "b2ac866a-4035-4ed5-cc14-8194c44ae35d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#rand 1000 vectors of 30 indexs\n",
+        "min=300\n",
+        "max=0\n",
+        "AllImages = preprocess_input(images)\n",
+        "for number in range(1000):   \n",
+        "    rndArr=np.random.choice(300, 30)\n",
+        "    selectImg=images[rndArr,:]\n",
+        "    selectImg1 = preprocess_input(selectImg)\n",
+        "    fid = calculate_fid(model, AllImages, selectImg1)\n",
+        "    if fid < min:\n",
+        "       print('FID (temp min): %.3f' % fid)\n",
+        "       min=fid\n",
+        "       minIndx= rndArr\n",
+        "    if fid > max:\n",
+        "       print('FID (temp max): %.3f' % fid)\n",
+        "       max=fid\n",
+        "       maxIndx= rndArr\n",
+        "print('MIN Final---FID : %.3f' % min)\n",
+        "print(minIndx)\n",
+        "print('MAX Final---FID : %.3f' % max)\n",
+        "print(maxIndx)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "FID (temp min): 217.818\n",
+            "FID (temp max): 217.818\n",
+            "FID (temp min): 208.034\n",
+            "FID (temp min): 201.899\n",
+            "FID (temp max): 229.195\n",
+            "FID (temp min): 201.761\n",
+            "FID (temp min): 201.072\n",
+            "FID (temp max): 231.111\n",
+            "FID (temp min): 200.004\n",
+            "FID (temp min): 197.385\n",
+            "FID (temp min): 194.471\n",
+            "FID (temp min): 193.589\n",
+            "FID (temp max): 231.899\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yWwJOeorKPef"
+      },
+      "source": [
+        "t1=[113,101,2,150,279,254,3,280,32,95,249,157,234,1,115,285,196,175,220,231,24,29,0,215,149,4,9,7,97,22]\n",
+        "selectImg=images[t1,:]\n",
+        "print(selectImg.shape)\n",
+        "selectImg1 = preprocess_input(selectImg)\n",
+        "fid = calculate_fid(model, AllImages, selectImg1)\n",
+        "print('FID (temp min): %.3f' % fid)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
